--- a/blog/templates/blog/post/detail.html
+++ b/blog/templates/blog/post/detail.html
@@ -2,9 +2,37 @@
 {% block title %}{{ post.title }}{% endblock %}
 
 {% block content %}
-    <h1>{{ post.title }}</h1>
-    <p class="date">
-     Опубликован : {{ post.publish }} | Автор: {{ post.author }}
-     </p>
-    {{ post.body|linebreaks }}
+<h1>{{ post.title }}</h1>
+<p class="date">
+    Опубликован : {{ post.publish }} | Автор: {{ post.author }}
+</p>
+{{ post.body|linebreaks }}
+<p>
+    <a href="{%url 'blog:post_share' post.id %}">Поделиться этой новостью</a>
+</p>
+<h2> Похожие новости </h2>
+{% for post in similar_posts %}
+<p> <a href="{{ post.get_absolute_url}}"> {{ post.title }}</a></p>
+{% empty %}
+нет похожих новостей
+{% endfor%}
+<!--Шаблонный тег  with  полезен тем, что он позволяет избегать многокраного обращения
+к базе данных или к дорогостоящим методам.-->
+{% with comments.count as total_comments %}
+<h2>
+    Количество комментариев : {{total_comments}}
+</h2>
+{% endwith %}
+{% for comment in comments %}
+<div class="comment">
+    <p class="info">
+        Комментарий № {{ forloop.counter }} написанный {{ comment.name }}
+        {{ comment.created }}
+    </p>
+    {{ comment.body|linebreaks}}
+</div>
+{% empty %}
+<p> Нет комментариев </p>
+{% endfor %}
+{% include "blog/post/includes/comment_form.html" %}
 {% endblock %}
