--- a/blog/templates/blog/post/list.html
+++ b/blog/templates/blog/post/list.html
@@ -5,10 +5,19 @@
 {% block content %}
 <h1> Мой блог.</h1>
     {% for post in posts %}
-        <h2> <a href="{% url 'blog:post_detail' post.id %}"> {{ post.title }} </a> </h2>
+        <h2> <a href="{{ post.get_absolute_url }}"> {{ post.title }} </a> </h2>
+        {% if post.tags.all %}<p class="tags">Метки:
+        {% for tag in post.tags.all %}
+        <a href="{% url 'blog:post_list_by_tag' tag.slug %}">{{ tag.name }}</a>
+        {% if not forloop.last %}, {% endif %}
+        {% endfor %}
+        </p> {% endif%}
+        {% if tag %} <h2>Пост с пометкой "{{ tag.name }}"</h2> {% endif %}
         <p class="date">
             Опубликован : {{ post.publish }} | Автор: {{ post.author }}
         </p>
+
         {{ post.body|truncatewords:30|linebreaks }}
     {% endfor %}
+    {% include "pagination.html" with page=posts  %}
 {% endblock %}
